<resources>
    <string name="app_name">TealiumAirship</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="track_event">Track Event</string>
    <string name="track_view">Track View</string>
    <string name="analytics_enabled">Analytics</string>
    <string name="enabled">Enabled</string>
    <string name="disabled">Disabled</string>
    <string name="messaging">Messaging</string>
    <string name="push_enabled">Push</string>
    <string name="back">Back</string>
    <string name="email">Email</string>
    <string name="login">Login</string>
    <string name="add_channel_tag">Add Channel Tag</string>
    <string name="add_user_tag">Add User Tag</string>
    <string name="remove">Remove</string>
    <string name="add">Add</string>
    <string name="user_tag">User Tag</string>
    <string name="group">Group</string>
    <string name="channel_tag">Channel Tag</string>
    <string name="options">Options</string>
    <string name="user">User</string>
</resources>